changed the  / in images

--- a/home.html
+++ b/home.html
@@ -39,14 +39,14 @@
 
             <div class="article__grid">
                 <a href="#" class="article__item">
-                    <div class="article__image" style="background-image: url('/images/dance.png')"></div>
+                    <div class="article__image" style="background-image: url('images/dance.png')"></div>
                     <div class="article__text">
                         <div class="article__title">Dancing</div>
                     </div>
                 </a>
 
                 <a href="#" class="article__item">
-                    <div class="article__image" style="background-image: url('/images/programming.jpeg')">
+                    <div class="article__image" style="background-image: url('images/programming.jpeg')">
                     </div>
                     <div class="article__text">
                         <div class="article__title">Programming</div>
@@ -54,14 +54,14 @@
                 </a>
 
                 <a href="#" class="article__item">
-                    <div class="article__image" style="background-image: url('/images/image-plane.jpg')"></div>
+                    <div class="article__image" style="background-image: url('images/image-plane.jpg')"></div>
                     <div class="article__text">
                         <div class="article__title">Travelling</div>
                     </div>
                 </a>
 
                 <a href="#" class="article__item">
-                    <div class="article__image" style="background-image: url('/images/ethical.jpeg')"></div>
+                    <div class="article__image" style="background-image: url('images/ethical.jpeg')"></div>
                     <div class="article__text">
                         <div class="article__title">Ethical Hacking</div>
                     </div>
